change headline + testimonial

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <header>
             <div class="container">
                 <div class="intro-text">
-                    <div class="intro-heading">Genervt von ebay?</div>
+                    <div class="intro-heading">Genervt von Kleinanzeigen?</div>
                     <div class="intro-lead-in">Der neue und schnellste Weg Ihre Möbel zu verkaufen</div>
                     <a href="#modalsell" class="active btn btn-success btn-xl page-scroll" data-toggle="modal" onClick="_gaq.push(['_trackEvent', 'CTAs', 'click', 'top sell button']);">Jetzt kostenlos Anfragen</a><br><br><br>
 
@@ -507,7 +507,7 @@
                   <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/abrodo/128.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Entrümpler finden oder alles einzeln auf ebay? Wirkaufenmoebel.de hat mir die Entscheidung und Arbeit abgenommen! </p>
+                  <p>Warum Kleinanzeigen, wenn es auch einfacher geht - danke wirkaufenmoebel.de!</p>
                   <small>Arthur aus Berlin-Charlottenburg</small>
                 </div>
               </div>
