munich badge, copy tweaks

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
 
     <body id="page-top" class="index">
-    <!--    
+  
         <div id="wrapper" class="hidden-xs">
-    <img src="img/berlin.png" class="corner" alt=""/>
-</div>-->
+    <img src="img/muenchen.png" class="corner" alt=""/>
+</div>
         
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -93,13 +93,13 @@
                             <a href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#services">Wer sind wir?</span></a>
+                            <a class="page-scroll" href="#services">Über <span class="hidden-sm">uns</span></span></a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#portfolio">In 3 Schritten</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#sell">Möbel verkaufen</a>
+                            <a class="page-scroll" href="#sell"><span class="hidden-sm">Möbel </span>verkaufen</a>
                         </li>
   <!-- <li>
                       <a class="page-scroll" href="#modalbuy" style="color:#de6e49" data-toggle="modal" onClick="_gaq.push(['_trackEvent', 'CTAs', 'click', 'top buy link']);">Käufer?</a>
@@ -130,7 +130,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Wer sind wir?</h2>
+                        <h2 class="section-heading">Über uns</h2>
                         <h3 class="section-subheading text-muted" style="color:#F5F5F5">Wir sind ein unabhängiges Verkaufs-Netzwerk. Wir versteigern Ihre Möbel und finden den besten Käufer für Sie. Innerhalb 48 Stunden, unverbindlich und ohne Verhandlungen.
                         </h3>
                     </div>
@@ -174,7 +174,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">In 3 Schritten</h2>
-      <h3 class="section-subheading text-muted">Ob Antiquität oder Entrümpelung finden wir den besten Käufer für Ihre Möbel. <br> Schnell, zuverlässig und ohne Verhandlungen.<br><br></h3>
+      <h3 class="section-subheading text-muted">Antiquität, Designermöbel oder Ikea - wir finden wir den besten Käufer für Ihre Möbel. <br> Schnell, zuverlässig und ohne Verhandlungen.<br><br></h3>
                 </div>
             </div>
             <div class="row">
