--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Über uns</h2>
-                        <h3 class="section-subheading text-muted" style="color:#F5F5F5">Wir sind ein unabhängiges Verkaufs-Netzwerk. Wir versteigern Ihre Möbel und finden den besten Käufer für Sie. Innerhalb 48 Stunden, unverbindlich und ohne Verhandlungen.
+                        <h3 class="section-subheading text-muted" style="color:#F5F5F5">Wir sind ein unabhängiges Verkaufs-Netzwerk und versteigern Ihre Möbel für Sie. Wir finden den besten Käufer innerhalb 48 Stunden, unverbindlich und ohne Verhandlungen.
                         </h3>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                         </span>
                         <h4 class="service-heading" style="color:#F5F5F5">Fair</h4>
                         <p class="text-muted" style="color:#fff">
-                             Keine Schnäppchen auf Ihre Kosten. Unser Preisangebot ist <b>unverbindlich</b> - ganz egal ob Antik, Designermöbel oder Ikea.
+                             Keine Schnäppchen auf Ihre Kosten. Unser Preisangebot ist <b>unverbindlich</b> - ganz egal ob Antiquität, Designermöbel oder Ikea.
                         </p>
                     </div>
                     <div class="col-md-4">
@@ -162,7 +162,7 @@
                             <i class="fa fa-euro fa-stack-1x fa-inverse" style="color:#f67c4e"></i>
                         </span>
                         <h4 class="service-heading" style="color:#F5F5F5">Profitabel</h4>
-                        <p class="text-muted" style="color:#fff">                                                 Wir erzielen Höchstpreise durch unserere Versteigerung unter 15 spezialisierten Partnern in Berlin und Umgebung. </p>
+                        <p class="text-muted" style="color:#fff">                                                 Wir erzielen Höchstpreise durch unserere Versteigerung unter spezialisierten Partnern in Ihrer Umgebung. </p>
                     </div>
                 </div>
             </div>
