--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Über uns</h2>
-                        <h3 class="section-subheading text-muted" style="color:#F5F5F5">Wir sind ein unabhängiges Verkaufs-Netzwerk und versteigern Ihre Möbel für Sie. Wir finden den besten Käufer innerhalb 48 Stunden, unverbindlich und ohne Verhandlungen.
+                        <h3 class="section-subheading text-muted" style="color:#F5F5F5">Wir sind ein unabhängiges Verkaufs-Netzwerk für hochwertige Möbel. In nur 48 Stunden finden wir den besten Käufer für Ihr Möbelstück - unverbindlich und ohne Verhandlungen.
+                        
                         </h3>
                     </div>
                 </div>
@@ -183,7 +184,9 @@
                     <div class="portfolio-caption text-center vision">
                          <a href="#portfolioModal1" data-toggle="modal"><h4>Kostenlose Verkaufsanfrage</h4></a>
                          <br>
-                        <p class="text-muted vision">Über unser <a href="#modalsell" data-toggle="modal" onClick="_gaq.push(['_trackEvent', 'CTAs', 'click', 'step one sell link']);"><b>Verkaufsformular</b></a> informieren Sie uns in wenigen Klicks über die zu verkaufenden Möbel. Wir starten unmittelbar eine <b>kostenlose und unverbindliche</b> Versteigerung unter unseren Partnern.</p>
+                        <p class="text-muted vision">Über unser <a href="#modalsell" data-toggle="modal" onClick="_gaq.push(['_trackEvent', 'CTAs', 'click', 'step one sell link']);"><b>Verkaufsformular</b></a> informieren Sie uns in wenigen Klicks über die zu verkaufenden Möbel. Wir starten unmittelbar eine <b>kostenlose und unverbindliche</b> Versteigerung unter unseren Partnern.
+                
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 portfolio-item">
